# -slime-ng

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  bootstrap.sh  build.sh  codegen.slime  core.slime.txt  grammar.ebnf  lexer.slime  lockfile.rs  main.slime  manifest.rs  mod.rs  parser.slime:  registry.rs  slime.toml  slime_runtime.js  stdlib.rs  wasm_binary.rs
.github/workflows/: release.yml
examples/: calculator.slime  fizzbuzz.slime  hello.slime  parse_test.slime  type_error.slime  wasm_test.slime
examples/invalid/: builtin_type_error.slime  missing_return.slime  type_error.slime  undefined_variable.slime
examples/modules/: wasm_import_call.slime  wasm_multi_function.slime
examples/valid/: basic.slime  function_calls.slime  stdlib_usage.slime  wasm_basic.slime  wasm_function_call.slime  wasm_stdlib_input.slime  wasm_stdlib_len.slime  wasm_stdlib_print.slime  wasm_stdlib_to_string.slime
github/workflows/: release.yml
spec/: lexer.md
src/: ast.rs  err.rs  error.rs  lexer.rs  lib.rs  main.rs  manifest.rs  native.rs  native_backend.rs  parser.rs  registry.rs  run.rs  stdlib_core.rs  typechecker.rs  wasm.rs  wasm_binary.rs
src/ir/: lowering.rs  mod.rs  types.rs
src/wasm_backend/: codegen.rs
tests/: end_to_end.rs  pipeline.rs  typecheck_test.rs  wasm_test.rs
