[package]
name = "slime-ng"
version = "0.1.0"
edition = "2021"
authors = ["SLIME Team"]
description = "Systems Language for Interactive Multiplatform Execution"
license = "MIT"
repository = "https://github.com/yourusername/slime-ng"

[dependencies]

[lib]
name = "slime"
path = "src/lib.rs"

[[bin]]
name = "slimec"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
